Rewrite for a html file

--- a/script/Rmd/instruction.html
+++ b/script/Rmd/instruction.html
@@ -197,10 +197,6 @@ body{
   font-family: Helvetica;
   font-size: 14pt;
 }
-<!-- /* Headers */ -->
-<!-- h1,h2,h3,h4,h5,h6{ -->
-<!--   font-size: 24pt; -->
-<!-- } -->
 </style>
 <div id="participant-recruitment" class="section level2">
 <h2>PARTICIPANT RECRUITMENT:</h2>
@@ -230,12 +226,11 @@ body{
 
 </div>
 <p>If you don’t see the images above, go to File &gt;&gt; Preset &gt;&gt; select “Analogue + Digital”. Adjust the volume of the headphone so that it sounds naturally.</p>
-
 <ul>
 <li>Max</li>
 </ul>
 <ol style="list-style-type: decimal">
-<li>Go to Desktop &gt;&gt; Atsuko &gt;&gt; ExpertPiano &gt;&gt; open the “mainPatch.maxpat” and the “imageDisplay.maxpat”.</li>
+<li>Go to Desktop &gt;&gt; Atsuko &gt;&gt; expertpiano &gt;&gt; open the “mainPatch.maxpat” and the “imageDisplay.maxpat”.</li>
 <li>Move the window of the “imageDisplay.maxpat” to the right (on the screen in front of the piano”) and press F for a fullscreen mode.</li>
 <li>Read the instruction for the “mainPatch.maxpat” below.
 <ul>
@@ -258,7 +253,6 @@ body{
 <li>Click the “inst_g1” button to show a general instruction on the “imageDisplay.maxpat”.</li>
 <li>Enter SubNr for the current participant.</li>
 </ol>
-
 </div>
 <div id="when-participant-arrives" class="section level2">
 <h2>WHEN PARTICIPANT ARRIVES:</h2>
