--- a/material/instruction/instruction.html
+++ b/material/instruction/instruction.html
@@ -34,6 +34,8 @@ span{
 <p><img src="./image/03.png" width="1024"></p>
 <p>If you don’t see the images above, go to <strong>File &gt;&gt; Preset &gt;&gt; select “Analogue + Digital”</strong>. Adjust the volume of the headphone so that it sounds naturally.</p>
 <h3 id="max">Max</h3>
+<h4 id="experiment.maxpat-controller-during-the-experiment-desktop-atsuko_teaching-v2.0"><span> EXPERIMENT.maxpat (controller) during the experiment! (Desktop &gt;&gt; Atsuko_teaching-v2.0)</span></h4>
+<p><img src="./image/controller.png" width="50%"></p>
 <ol type="1">
 <li>Go to <strong>Desktop &gt;&gt; Atsuko_teaching-v2.0 &gt;&gt; open the “main.maxpat”, the “practice.maxpat” and the “display.maxpat”</strong>.</li>
 <li>Move the window of the “display.maxpat” to the right (on the screen in front of the piano”) and press F for a fullscreen mode. <span>If there is a toobar surrounding the display, get rid of it by pressing cmd+8 (not F8)</span>.</li>
@@ -119,7 +121,7 @@ span{
 <p><strong>Collect the informed consent form</strong></p>
 </blockquote>
 <h3 id="warm-up-session">Warm-up session</h3>
-<p><em>Now, you are going to play what you practised during the experiment. Before we start testing, I would like you to practise your favourite pieces / exercises so that you can get used to the digital piano. When you think that you can comfortably perform music with this piano, please let me know.</em></p>
+<p><em>Now, you are going to play what you practised during the experiment. Before we start testing, I would like you to practise your favourite pieces / exercises so that you can get used to the digital piano. I am going to leave the room, so when you think that you can comfortably perform music with this piano, please let me know.</em></p>
 <blockquote>
 <p><strong>Experimenter should leave the room / Let participants practise their favourite pieces alone</strong></p>
 </blockquote>
@@ -132,11 +134,12 @@ span{
 </blockquote>
 <p><img src="./image/inst_1.png" width="1024"></p>
 <blockquote>
-<p><strong>Ask participants to choose one of the favourite tempi</strong></p>
+<p><strong>Ask participants to choose one of the favourite tempi (100, 110, 120 bpm)</strong></p>
 </blockquote>
+<p><span>In each beat, there should be two 8th notes! Please check participants understand the tempo correctly.</span></p>
 <p><em>Please practise until you feel that you comfortably perform the piece without pitch errors. After practice, we will have a brief test to make sure you can perform the piece. Let me know when you are ready for the brief test.</em></p>
 <blockquote>
-<p><strong>Let the participant practise the piece (100, 110, 120 bpm)</strong></p>
+<p><strong>Let the participant practise the piece</strong></p>
 </blockquote>
 <blockquote>
 <p><strong>Click “inst_2”</strong></p>
@@ -157,7 +160,7 @@ span{
 <ol type="1">
 <li>1st Stimulus</li>
 </ol>
-<p><em>You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and if you have any question, please ask the experimenter now. If you don’t have any question, I will give you the sound of the metronome and please perform the piece according to the notation.</em></p>
+<p><em>You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and if you have any question, please ask the experimenter now.</em></p>
 <blockquote>
 <p><strong>Open practice.maxpat</strong></p>
 </blockquote>
@@ -176,6 +179,7 @@ span{
 <li>Piano: quieter sound</li>
 </ul>
 <p><img src="./image/prac_stim_a.png" width="1024"></p>
+<p><em>If you don’t have any question, I will give you the sound of the metronome and please perform the piece according to the notation.</em></p>
 <blockquote>
 <p><strong>Check the participant to play the piece expressively without pitch errors twice consecutively</strong></p>
 </blockquote>
@@ -196,8 +200,10 @@ span{
 <ol start="2" type="1">
 <li>2nd Stimulus</li>
 </ol>
-<p><em>Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation.</em></p>
+<p><em>Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation and practise it until you feel you comfortably perform the piece with the expression.</em></p>
+<blockquote>
 <p><strong>Open practice.maxpat</strong></p>
+</blockquote>
 <blockquote>
 <p><strong>Enter the block number 2 (and sheet music will be displayed)</strong></p>
 </blockquote>
@@ -223,11 +229,12 @@ span{
 <p><strong>1 - 8 trials</strong></p>
 </blockquote>
 <p><em>Thank you. Next, you will perform the same piece again but in a different condition.</em></p>
+<h3 id="take-a-brief-break-2-min">— Take a brief break (2 min)!!! —</h3>
 <h4 id="performing-condition">2) Performing condition</h4>
 <ol type="1">
 <li>1st Stimulus</li>
 </ol>
-<p><em>You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation.</em></p>
+<p><em>You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and practise it until you feel you comfortably perform the piece with the expression.</em></p>
 <blockquote>
 <p><strong>Open practice.maxpat</strong></p>
 </blockquote>
@@ -256,7 +263,7 @@ span{
 <ol start="2" type="1">
 <li>2nd Stimulus</li>
 </ol>
-<p><em>Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation.</em></p>
+<p><em>Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation and practise it until you feel you comfortably perform the piece with the expression.</em></p>
 <blockquote>
 <p><strong>Open practice.maxpat</strong></p>
 </blockquote>
@@ -288,7 +295,7 @@ span{
 <blockquote>
 <p><strong>Collect the short questionnaire</strong></p>
 </blockquote>
-<p><em>Thank you for coming today and please feel free to contact me if you have any questions about my study.</em></p>
+<p><em>Thank you for coming today and please feel free to contact me if you have any questions about our study.</em></p>
 <h2 id="after-participant-leaves">AFTER PARTICIPANT LEAVES:</h2>
 <ol type="1">
 <li>Check whether data were recorded correctly. If not, leave a memo on the checklist.</li>
