--- a/material/instruction/instruction.html
+++ b/material/instruction/instruction.html
@@ -151,6 +151,9 @@ span{
 <ul>
 <li>If he or she cannot perform the piece without errors within <strong>5 attempts</strong>, leave a memo and continue the experiment.</li>
 </ul>
+<blockquote>
+<p><strong>Close practice.maxpat</strong></p>
+</blockquote>
 <h3 id="experiment">Experiment</h3>
 <ul>
 <li><span>Participants whose SubNr is odd start from the teaching condition whereas those whose SubNr is even start from the performing condition.</span></li>
@@ -160,7 +163,7 @@ span{
 <ol type="1">
 <li>1st Stimulus</li>
 </ol>
-<p><em>You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and if you have any question, please ask the experimenter now.</em></p>
+<p><em>You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and if you have any question, please ask the experimenter now. Please read the notation and practise it until you feel you comfortably perform the piece with the expression</em></p>
 <blockquote>
 <p><strong>Open practice.maxpat</strong></p>
 </blockquote>
@@ -179,7 +182,6 @@ span{
 <li>Piano: quieter sound</li>
 </ul>
 <p><img src="./image/prac_stim_a.png" width="1024"></p>
-<p><em>If you don’t have any question, I will give you the sound of the metronome and please perform the piece according to the notation.</em></p>
 <blockquote>
 <p><strong>Check the participant to play the piece expressively without pitch errors twice consecutively</strong></p>
 </blockquote>
@@ -196,6 +198,9 @@ span{
 </blockquote>
 <blockquote>
 <p><strong>1 - 8 trials</strong></p>
+</blockquote>
+<blockquote>
+<p><strong>Close main.maxpat</strong></p>
 </blockquote>
 <ol start="2" type="1">
 <li>2nd Stimulus</li>
@@ -227,6 +232,9 @@ span{
 </blockquote>
 <blockquote>
 <p><strong>1 - 8 trials</strong></p>
+</blockquote>
+<blockquote>
+<p><strong>Close main.maxpat</strong></p>
 </blockquote>
 <p><em>Thank you. Next, you will perform the same piece again but in a different condition.</em></p>
 <h3 id="take-a-brief-break-2-min">— Take a brief break (2 min)!!! —</h3>
@@ -260,6 +268,9 @@ span{
 <blockquote>
 <p><strong>1 - 8 trials</strong></p>
 </blockquote>
+<blockquote>
+<p><strong>Close main.maxpat</strong></p>
+</blockquote>
 <ol start="2" type="1">
 <li>2nd Stimulus</li>
 </ol>
@@ -289,6 +300,9 @@ span{
 </blockquote>
 <blockquote>
 <p><strong>1 - 8 trials</strong></p>
+</blockquote>
+<blockquote>
+<p><strong>Close main.maxpat</strong></p>
 </blockquote>
 <h2 id="questionnaire">Questionnaire</h2>
 <p><em>Thank you. This is the end of the experiment. Lastly, could you please fill in the questionnaire?</em></p>
