--- a/material/instruction/instruction.html
+++ b/material/instruction/instruction.html
@@ -40,7 +40,7 @@ span{
 <li>Go to <strong>Desktop &gt;&gt; Atsuko_teaching-v2.0 &gt;&gt; open the “main.maxpat”, the “practice.maxpat” and the “display.maxpat”</strong>.</li>
 <li>Move the window of the “display.maxpat” to the right (on the screen in front of the piano”) and press F for a fullscreen mode. <span>If there is a toobar surrounding the display, get rid of it by pressing cmd+8 (not F8)</span>.</li>
 <li>Read the instruction on the “main.maxpat” and the “practice.maxpat”.</li>
-<li>Also check whether the piano sounds come from the headphone and <span>MIDI inputs are correctly responded (Pitch and Velocity should change according to key presses on MIDIRecording subpatchers)</span>.</li>
+<li>Also check whether the piano sounds come from the headphone and <span>MIDI inputs are correctly responded (<strong>Please press J for practice.maxpat / A for main.maxpat before you press a key because both patchers do not accept any key press before the metronome (Added 06/07/19)</strong>. After the metronome sound, Pitch and Velocity on MIDIRecording subpatchers should change according to key presses)</span>.</li>
 <li>If the sound of the metronome and the piano does not come from the computer speaker, go to <strong>System Preference &gt;&gt; Sound &gt;&gt; Output &gt;&gt; select “Scarllet 6i6 USB”</strong>.</li>
 <li>If you cannot still solve the problem above, please quit Max and relaunch it again.</li>
 <li>Click the “inst_1” button on the practice.maxpat to show a general instruction on the “display.maxpat”.</li>
